--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
       }
       
       @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+      .animate-spin-reverse { animation: spin-reverse 1s linear infinite; }
+      @keyframes spin-reverse { from { transform: rotate(360deg); } to { transform: rotate(0deg); } }
+
       .fade-in { animation: fadeIn 0.4s ease-out forwards; }
       @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
     </style>
