feat: Add PDF export and improve admin UI
Introduces PDF export functionality for reports and enhances the admin dashboard's user interface. This includes:
- Adding CSS for a shimmer effect on skeleton loaders.
- Importing `jspdf` and `jspdf-autotable` for PDF generation.
- Updating `AdminDashboard.tsx` to include new icons and structure for a potentially expandable menu system.
- Modifying `AturGelombangTab.tsx` to use clearer labels and improve save button feedback.
- Enabling PDF export in `RekapTab.tsx`, adding a `FileDown` icon, and passing the `currentUser` for report metadata.
- Implementing `exportToPDF` in `adminHelpers.tsx` with support for title, columns, rows, and metadata.

--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
 
       .fade-in { animation: fadeIn 0.4s ease-out forwards; }
       @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+
+      /* Shimmer Effect for Skeletons */
+      @keyframes shimmer {
+        0% { transform: translateX(-100%); }
+        100% { transform: translateX(100%); }
+      }
+      .animate-shimmer {
+        animation: shimmer 2s infinite linear;
+      }
     </style>
   <script type="importmap">
 {
@@ -59,7 +68,9 @@
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
     "xlsx": "https://esm.sh/xlsx@^0.18.5",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "jspdf": "https://esm.sh/jspdf@2.5.1",
+    "jspdf-autotable": "https://esm.sh/jspdf-autotable@3.5.29"
   }
 }
 </script>
