feat(admin): Enhance report printout
Update the favicon to a more appropriate SVG.
Refine the layout and add NIP field to admin reports (RekapTab and RankingTab) for improved professionalism.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=10.0, user-scalable=yes" />
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%234f46e5' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Crect x='2' y='3' width='20' height='14' rx='2' ry='2'%3E%3C/rect%3E%3Cline x1='8' y1='21' x2='16' y2='21'%3E%3C/line%3E%3C/line x1='12' y1='17' x2='12' y2='21'%3E%3C/line%3E%3C/svg%3E" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%234f46e5'%3E%3Cpath d='M20 3H4C2.89 3 2 3.89 2 5v10c0 1.11.89 2 2 2h6v2H8v2h8v-2h-2v-2h6c1.11 0 2-.89 2-2V5c0-1.11-.89-2-2-2zm0 12H4V5h16v10z'/%3E%3C/svg%3E" />
     <title>TKA | CBT System</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
